misc: Remove blog page content [temp]

--- a/src/blog.njk
+++ b/src/blog.njk
@@ -7,13 +7,13 @@ pageHeader: Tips & Strategies to Grow Your Local Business Online
 
 <div class="blog__page">
     {% include "page-header.njk"%}
-    <div class="blog__page-container container">
+    {# <div class="blog__page-container container"> #}
         {# Loop through each post tagged "post" #}
-        {%- for post in collections.post | reverse -%}
+        {# {%- for post in collections.post | reverse -%} #}
             
-            {% include "article-snippet.njk" %}
+            {# {% include "article-snippet.njk" %} #}
 
-        {% endfor%}
-    </div>
-    {% include "cta-section.njk"%}
+        {# {% endfor%} #}
+    {# </div> #}
+    {# {% include "cta-section.njk"%} #}
 </div>
